--- a/about.html
+++ b/about.html
@@ -25,13 +25,7 @@
 	<!-- Custom stlylesheet -->
 	<link type="text/css" rel="stylesheet" href="css/style.css">
 	<link type="text/css" rel="stylesheet" href="css/tkc.css">
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
+	<link type="image/jpg" rel="shortcut icon" href="img/logo.jpg">
 
 </head>
 
@@ -40,60 +34,29 @@
 		<!-- HEADER -->
 		<header id="home">
 			<!-- NAVGATION -->
-			<nav id="main-navbar">
+			<nav id="main-navbar" class="navbar-fixed-top">
 				<div class="container">
 					<div class="navbar-header">
 						<!-- Logo -->
 						<div class="navbar-brand">
-							<a class="logo" href="index.html"><img src="img/logo.jpg" alt="The King's Church"></a>
+							<a class="logo" href="home"><img src="img/logo.jpg" alt="The King's Church"></a>
 						</div>
 						<!-- Logo -->
 
 						<!-- Mobile toggle -->
 						<button class="navbar-toggle-btn">
-								<i class="fa fa-bars"></i>
-							</button>
+							<i class="fa fa-bars"></i>
+						</button>
 						<!-- Mobile toggle -->
-
-						<!-- Mobile Search toggle -->
-						<button class="search-toggle-btn">
-								<i class="fa fa-search"></i>
-							</button>
-						<!-- Mobile Search toggle -->
 					</div>
-
-					<!-- Search -->
-					<!-- <div class="navbar-search">
-						<button class="search-btn"><i class="fa fa-search"></i></button>
-						<div class="search-form">
-							<form>
-								<input class="input" type="text" name="search" placeholder="Search">
-							</form>
-						</div>
-					</div> -->
-					<!-- Search -->
 
 					<!-- Nav menu -->
 					<ul class="navbar-menu nav navbar-nav navbar-right">
-						<li><a href="index">Home</a></li>
+						<li><a href="home">Home</a></li>
 						<li><a href="about">About</a></li>
-						<li class="has-dropdown"><a href="#">Causes</a>
-							<ul class="dropdown">
-								<li><a href="single-cause.html">Single Cause</a></li>
-							</ul>
-						</li>
-						<li class="has-dropdown"><a href="#">Events</a>
-							<ul class="dropdown">
-								<li><a href="single-event">Single event</a></li>
-							</ul>
-						</li>
-						<li class="has-dropdown"><a href="#">Blog</a>
-							<ul class="dropdown">
-								<li><a href="blog">Blog Page</a></li>
-								<li><a href="single-blog">Single Blog</a></li>
-							</ul>
-						</li>
-						<li><a href="#footer">Contact</a></li>
+						<li><a href="#">Messages</a></li>
+						<li><a href="#">Gallery</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 					<!-- Nav menu -->
 				</div>
@@ -105,7 +68,7 @@
 				<!-- home item -->
 				<div class="home-item">
 					<!-- section background -->
-					<div class="section-bg" style="background-image: url(./img/background-1.jpg);"></div>
+					<div class="section-bg" style="background-image: url(./img/background-2.jpg);"></div>
 					<!-- /section background -->
 
 					<!-- home content -->
@@ -114,33 +77,7 @@
 							<div class="row">
 								<div class="col-md-8">
 									<div class="home-content">
-										<h1>Save The Children</h1>
-										<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-										<a href="#" class="primary-button">View Causes</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- /home content -->
-				</div>
-				<!-- /home item -->
-
-				<!-- home item -->
-				<div class="home-item">
-					<!-- Background Image -->
-					<div class="section-bg" style="background-image: url(./img/background-2.jpg);"></div>
-					<!-- /Background Image -->
-
-					<!-- home content -->
-					<div class="home">
-						<div class="container">
-							<div class="row">
-								<div class="col-md-8">
-									<div class="home-content">
-										<h1>Become A Volunteer</h1>
-										<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-										<a href="#" class="primary-button">Join Us Now!</a>
+										<h1>About Us</h1>
 									</div>
 								</div>
 							</div>
@@ -161,9 +98,9 @@
 				<!-- row -->
 				<div class="row">
 					<!-- about content -->
-					<div class="col-md-5">
+					<div class="col-md-12">
 						<div class="section-title">
-							<h2 class="title">Welcome to The King's Church</h2>
+							<h2 class="title text-center">ABOUT US</h2>
 						</div>
 						<div class="about-content">
 							<p>
@@ -192,15 +129,6 @@
 						</div>
 					</div>
 					<!-- /about content -->
-
-					<!-- about video -->
-					<div class="col-md-offset-1 col-md-6">
-						<a href="#" class="about-video">
-								<i class="play-icon fa fa-play"></i>
-								<img src="./img/about.jpg" alt="">
-							</a>
-					</div>
-					<!-- /about video -->
 				</div>
 				<!-- /row -->
 			</div>
@@ -211,20 +139,18 @@
 		<!-- FOOTER -->
 		<footer id="footer" class="section">
 			<!-- container -->
-			<div class="container">
+			<div id="contact" class="container">
 				<!-- row -->
 				<div class="row">
 					<!-- footer contact -->
 					<div class="col-md-4">
 						<div class="footer">
-							<div class="footer-logo">
-								<a class="logo" href="#"><img src="./img/logo.jpg" alt=""></a>
-							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+							<h3 class="footer-title">Contact</h3>
+							<p>We're always available. We would love to hear from you.</p>
 							<ul class="footer-contact">
-								<li><i class="fa fa-map-marker"></i> 2736 Hinkle Deegan Lake Road</li>
-								<li><i class="fa fa-phone"></i> 607-279-9246</li>
-								<li><i class="fa fa-envelope"></i> <a href="#">Charity@email.com</a></li>
+								<li><i class="fa fa-map-marker"></i> Lagos, Nigeria</li>
+								<li><i class="fa fa-phone"></i> <a href="tel:0803 123 4567">0803 123 4567</a></li>
+								<li><i class="fa fa-envelope"></i> <a href="mailto:thekingschurch@gmail.com">thekingschurch@gmail.com</a></li>
 							</ul>
 						</div>
 					</div>
@@ -235,12 +161,12 @@
 						<div class="footer">
 							<h3 class="footer-title">Gallery</h3>
 							<ul class="footer-galery">
-								<li><a href="#"><img src="./img/galery-1.jpg" alt=""></a></li>
-								<li><a href="#"><img src="./img/galery-2.jpg" alt=""></a></li>
-								<li><a href="#"><img src="./img/galery-3.jpg" alt=""></a></li>
-								<li><a href="#"><img src="./img/galery-4.jpg" alt=""></a></li>
-								<li><a href="#"><img src="./img/galery-5.jpg" alt=""></a></li>
-								<li><a href="#"><img src="./img/galery-6.jpg" alt=""></a></li>
+								<li><a href="#"><img src="./img/tkc-img/FB_IMG_1491859722396.jpg" alt=""></a></li>
+								<li><a href="#"><img src="./img/tkc-img/Screenshot_2018-12-27-10-31-22-1.png" alt=""></a></li>
+								<li><a href="#"><img src="./img/tkc-img/IMG_20190101_104756_451.jpg" alt=""></a></li>
+								<li><a href="#"><img src="./img/tkc-img/IMG_20190428_180317_574.jpg" alt=""></a></li>
+<!-- 								<li><a href="#"><img src="./img/tkc-img/FB_IMG_1491859722396.jpg" alt=""></a></li>
+								<li><a href="#"><img src="./img/tkc-img/FB_IMG_1491859722396.jpg" alt=""></a></li> -->
 							</ul>
 						</div>
 					</div>
@@ -250,7 +176,7 @@
 					<div class="col-md-4">
 						<div class="footer">
 							<h3 class="footer-title">Newsletter</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+							<p>Subscribe to our monthly newsletters</p>
 							<form class="footer-newsletter">
 								<input class="input" type="email" placeholder="Enter your email">
 								<button class="primary-button">Subscribe</button>
@@ -270,22 +196,11 @@
 
 				<!-- footer copyright & nav -->
 				<div id="footer-bottom" class="row">
-					<div class="col-md-6 col-md-push-6">
-						<ul class="footer-nav">
-							<li><a href="#">Home</a></li>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Causes</a></li>
-							<li><a href="#">Events</a></li>
-							<li><a href="#">Blog</a></li>
-							<li><a href="#">Contact</a></li>
-						</ul>
-					</div>
-
-					<div class="col-md-6 col-md-pull-6">
-						<div class="footer-copyright">
-							<span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	Copyright &copy; 2019 All rights reserved | Website is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://eben.com.ng" target="_blank">Eben</a>
-	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span>
+					<div class="col-md-12">
+						<div class="footer-copyright text-center">
+							Copyright &copy; 2019 All rights reserved | Website developed with 
+							<i class="fa fa-heart-o" aria-hidden="true"></i> by 
+							<a href="https://eben.com.ng" style="color: #61118a" title="Ebenezer Oladutemu" target="_blank"><b>Eben</b></a>
 						</div>
 					</div>
 				</div>
