--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<!-- home item -->
 				<div class="home-item">
 					<!-- section background -->
-					<div class="section-bg" style="background-image: url(./img/bg.jpg);"></div>
+					<div class="section-bg" style="background-image: url(./img/bg-1.jpg);"></div>
 					<!-- /section background -->
 
 					<!-- home content -->
