Updated social links, email, phone and address

--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
 				<!-- home item -->
 				<div class="home-item">
 					<!-- section background -->
-					<div class="section-bg" style="background-image: url(./img/bg-1.jpg); background-position: -220px"></div>
+					<div class="section-bg" style="background-image: url(./img/bg-1.jpg);"></div>
 					<!-- /section background -->
 
 					<!-- home content -->
@@ -210,9 +210,9 @@
 							<h3 class="footer-title">Contact</h3>
 							<p>We're always available. We would love to hear from you.</p>
 							<ul class="footer-contact">
-								<li><i class="fa fa-map-marker"></i> Lagos, Nigeria</li>
-								<li><i class="fa fa-phone"></i> <a href="tel:0803 123 4567">0803 123 4567</a></li>
-								<li><i class="fa fa-envelope"></i> <a href="mailto:thekingschurch@gmail.com">thekingschurch@gmail.com</a></li>
+								<li><i class="fa fa-map-marker"></i> Hardunni Banquet Hall. Ayeni 1010 Close, Sheraton-Opebi Link Road. Ikeja</li>
+								<li><i class="fa fa-phone"></i> <a href="tel:0803 123 4567">08098256329</a>  <a href="tel:0803 123 4567">08120921658</a></li>
+								<li><i class="fa fa-envelope"></i> <a href="mailto:thekingschurch2016@gmail.com">thekingschurch2016@gmail.com</a></li>
 							</ul>
 						</div>
 					</div>
@@ -244,12 +244,10 @@
 								<button class="primary-button">Subscribe</button>
 							</form>
 							<ul class="footer-social">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-								<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-							</ul>
+								<li><a href="https://facebook.com/Thekingschurch" target="_blank"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://twitter.com/Thekingschurch3" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li><a href="https://instagram.com/Thekingschurch" target="_blank"><i class="fa fa-instagram"></i></a></li>
+							</ul>>
 						</div>
 					</div>
 					<!-- /footer newsletter -->
