Updated facebook link

--- a/home.html
+++ b/home.html
@@ -244,10 +244,10 @@
 								<button class="primary-button">Subscribe</button>
 							</form>
 							<ul class="footer-social">
-								<li><a href="https://facebook.com/Thekingschurch" target="_blank"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://www.facebook.com/The-Kings-Church-426057771213400/" target="_blank"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="https://twitter.com/Thekingschurch3" target="_blank"><i class="fa fa-twitter"></i></a></li>
 								<li><a href="https://instagram.com/Thekingschurch" target="_blank"><i class="fa fa-instagram"></i></a></li>
-							</ul>>
+							</ul>
 						</div>
 					</div>
 					<!-- /footer newsletter -->
