Updated meta tags

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta name="twitter:description" content="Bringing Many Sons Unto Glory">
     <meta name="twitter:image" content="https://tkc.com.ng/img">
     <meta name="twitter:site" content="@thekingschurch3">
-    <meta name="twitter:creator" content="@thekingschurch3">
+    <meta name="twitter:creator" content="@EbenOladutemu">
 
   <title>The King's Church | Welcome</title>
 
