--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <meta name="author" content="Kenneth Ayodele, The King's Church">
     <meta name="keywords" content="The King's Church, church, Kenneth Ayodele">
     <meta name="agency" content="The King's Church">
-    <meta name="image" content="https://tkc.com.ng/img">
+    <meta name="image" content="https://tkc.com.ng/img/logo.jpg">
     
     <!--Schema.org for Google-->
     <meta itemprop="name" content="The King's Church">
     <meta itemprop="title" content="The King's Church">
     <meta itemprop="description" content="Bringing Many Sons Unto Glory">
-    <meta itemprop="image" content="https://tkc.com.ng/img">
+    <meta itemprop="image" content="https://tkc.com.ng/img/logo.jpg">
     
     <!-- Twitter - Product (e-commerce) -->
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="The King's Church">
     <meta property="og:description" content="Bringing Many Sons Unto Glory">
     <meta property="og:url" content="https://tkc.com.ng">
-    <meta property="og:image" content="https://tkc.com.ng/img">
+    <meta property="og:image" content="https://tkc.com.ng/img/logo.jpg">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_NG">
     <meta property="og:site_name" content="The King's Church">
@@ -32,15 +32,15 @@
     <meta name="twitter:url" content="https://tkc.com.ng">
     <meta name="twitter:title" content="The King's Church">
     <meta name="twitter:description" content="Bringing Many Sons Unto Glory">
-    <meta name="twitter:image" content="https://tkc.com.ng/img">
-    <meta name="twitter:site" content="@theking'schurch3">
+    <meta name="twitter:image" content="https://tkc.com.ng/img/logo.jpg">
+    <meta name="twitter:site" content="@thekingschurch3">
     <meta name="twitter:creator" content="@EbenOladutemu">
 
   <title>The King's Church | Welcome</title>
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/logo.png" rel="icon">
+  <link href="img/logo.png" rel="apple-touch-icon">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -53,7 +53,8 @@
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style-purple.css" rel="stylesheet">
+  <link href="css/tkc-styles.css" rel="stylesheet">
 
 </head>
 
@@ -62,7 +63,9 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">DevFolio</a>
+      <a class="navbar-brand js-scroll" href="#page-top">
+        <img src="img/logo.png" alt="The King's Church" width="50" height="50">
+      </a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -75,16 +78,13 @@
             <a class="nav-link js-scroll active" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">About</a>
+            <a class="nav-link js-scroll" href="#about">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#service">Services</a>
+            <a class="nav-link js-scroll" href="#service">Messages</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Work</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#blog">Blog</a>
+            <a class="nav-link js-scroll" href="#work">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -96,14 +96,17 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/bg-1.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Morgan Freeman</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">CEO DevFolio,Web Developer,Web Designer,Frontend Developer,Graphic Designer</span><strong class="text-slider"></strong></p>
+          <h1 class="intro-title mb-4 mt-8">Welcome to The King's Church</h1>
+          <p class="intro-subtitle">
+            <span class="text-slider-items">Bringing Many Sons Unto Glory</span>
+            <strong class="text-slider"></strong>
+          </p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
