Added photo to welcome message

--- a/index.html
+++ b/index.html
@@ -146,11 +146,9 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="col-sm-6 col-md-5">
-                  <div class="about-img">
-                    <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
-                  </div>
-                </div>
+                <div class="about-im">
+                  <img src="img/tkc-img/IMG_20190101_104756_451.jpg" class="img-fluid rounded b-shadow-a" alt="Ayodele and Folasade Kenneth">
+                </div> 
               </div>
             </div>
           </div>
