--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <!--/ Intro Skew End /-->
 
   <section id="about" class="about-mf sect-pt4 route">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12">
           <div class="box-shadow-full">
@@ -128,20 +128,23 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                    imperdiet et, porttitor
-                    at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                    porttitor accumsan tincidunt.
+                   Greetings from our hearts in the Name of our Lord and Savior Jesus Christ.
                   </p>
                   <p class="lead">
-                    Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                    porttitor volutpat. Vestibulum
-                    ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                   We are called to the body of Christ at large but assigned to this local assembly and our primary assignment is to ensure that you have a glorious worship experience as we cast our crowns at His feet in total submission.
                   </p>
                   <p class="lead">
-                    Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                    Nulla porttitor accumsan
-                    tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                    Our prayer for you is that the God of all grace will anoint you with fresh oil as His Precious Spirit will illuminate the Word as we discover wondrous things out of His Law together.
+                  </p>
+                  <p class="lead">
+                    Further more, my wife and I pray that your lives will be a reflection of all that God intended originally for you to become on the earth.
+                  </p>
+                  <p class="lead">
+                    We declare the blessings of God on you, your children, your business, your ministry and your mission. We welcome you warmly with wide-open arms if you wish to become a member of this local assembly, but if otherwise, we would be glad to have you fellowship with us anytime you happen to travel by here.
+                  </p>
+                  <p class="lead">
+                    May the grace of our Lord Jesus Christ, the love of God, and the fellowship of the Holy Spirit be with you always.Stay loved in His Presence.<br>
+                    <strong>Ayodele & Folashade Kenneth.</strong>
                   </p>
                 </div>
               </div>
@@ -160,7 +163,7 @@
   <!--/ Section Contact-Footer Star /-->
   <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12">
           <div class="contact-mf">
@@ -169,7 +172,7 @@
                 <div class="col-md-6">
                   <div class="title-box-2">
                     <h5 class="title-left">
-                      Send Message Us
+                      Get In Touch
                     </h5>
                   </div>
                   <div>
@@ -211,28 +214,41 @@
                 <div class="col-md-6">
                   <div class="title-box-2 pt-4 pt-md-0">
                     <h5 class="title-left">
-                      Get in Touch
+                      Contact Us
                     </h5>
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                      expedita aperiam aliquid at.
-                      Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                      mollitia inventore?
+                      We're always available. We would love to hear from you.
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                      <li><span class="ion-ios-telephone"></span> (617) 557-0089</li>
-                      <li><span class="ion-email"></span> contact@example.com</li>
+                      <li><span class="ion-ios-location"></span> Hardunni Banquet Hall. Ayeni 1010 Close, Sheraton-Opebi Link Road. Ikeja</li>
+                      <li><span class="ion-ios-telephone"></span> 
+                        <a href="tel:08098256329">0809 825 6329&nbsp;&nbsp;&nbsp;&nbsp;</a>  
+                        <a href="tel:08120921658">0812 092 1658</a>
+                      </li>
+                      <li><span class="ion-email"></span> 
+                        <a href="mailto:thekingschurch2016@gmail.com">thekingschurch2016@gmail.com</a>
+                      </li>
                     </ul>
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li>
+                      <li>
+                        <a href="https://www.facebook.com/The-Kings-Church-426057771213400/">
+                          <span class="ico-circle"><i class="ion-social-facebook"></i></span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://instagram.com/Thekingschurch">
+                          <span class="ico-circle"><i class="fa fa-instagram"></i></span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="https://twitter.com/Thekingschurch3">
+                          <span class="ico-circle"><i class="ion-social-twitter"></i></span>
+                        </a>
+                      </li>
                     </ul>
                   </div>
                 </div>
