Added copyright to footer

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   </section>
 
   <!--/ Section Contact-Footer Star /-->
-  <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay-bg.jpg)">
+  <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/background-2.jpg)">
     <div class="overlay-mf"></div>
     <div class="container-fluid">
       <div class="row">
@@ -250,6 +250,11 @@
                         </a>
                       </li>
                     </ul>
+                  </div><hr>
+                  <div class="footer-copyright text-center mt-4">
+                    Copyright &copy; 2019 All rights reserved. Website cratfed with 
+                    <i class="fa fa-heart-o" aria-hidden="true"></i> by 
+                    <a href="https://eben.com.ng" style="color: #61118a" title="Ebenezer Oladutemu" target="_blank"><b>Eben</b></a>
                   </div>
                 </div>
               </div>
