--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta name="twitter:site" content="@thekingschurch3">
     <meta name="twitter:creator" content="@EbenOladutemu">
 
-  <title>The King's Church | Welcome</title>
+  <title>Welcome - The King's Church</title>
 
   <!-- Favicons -->
   <link href="img/logo.png" rel="icon">
@@ -157,6 +157,11 @@
           </div>
         </div>
       </div>
+      <div class="text-center">
+        <button type="submit" class="button button-a button-big button-rouded">
+          <a href="about" class="text-white">Learn More</a>
+        </button>
+      </div>
     </div>
   </section>
 
@@ -252,7 +257,7 @@
                     </ul>
                   </div><hr>
                   <div class="footer-copyright text-center mt-4">
-                    Copyright &copy; 2019 All rights reserved. Website cratfed with 
+                    Copyright &copy; <span id="year"></span> All rights reserved. Website cratfed with 
                     <i class="fa fa-heart-o" aria-hidden="true"></i> by 
                     <a href="https://eben.com.ng" style="color: #61118a" title="Ebenezer Oladutemu" target="_blank"><b>Eben</b></a>
                   </div>
@@ -286,6 +291,8 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
+  <script src="js/tkc-scripts.js"></script>
+  <script src="js/vue.min.js"></script>
 
 </body>
 </html>
