--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
             <a class="nav-link js-scroll active" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">About Us</a>
+            <a class="nav-link js-scroll" href="about">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#service">Messages</a>
+            <a class="nav-link js-scroll" href="#">Messages</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Gallery</a>
+            <a class="nav-link js-scroll" href="#">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
