--- a/about.html
+++ b/about.html
@@ -75,16 +75,16 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll active" href="#home">Home</a>
+            <a class="nav-link js-scroll active" href="home">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#about">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#service">Messages</a>
+            <a class="nav-link js-scroll" href="#">Messages</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Gallery</a>
+            <a class="nav-link js-scroll" href="#">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -120,7 +120,7 @@
         <div class="col-sm-12">
           <div class="box-shadow-full">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <div class="about-me pt-4 pt-md-0">
                   <div class="title-box-2">
                     <h5 class="title-left">
@@ -147,11 +147,7 @@
                     <strong>Ayodele & Folashade Kenneth.</strong>
                   </p>
                 </div>
-              </div>
-              <div class="col-md-6">
-                <div class="about-im">
-                  <img src="img/tkc-img/IMG_20190101_104756_451.jpg" class="img-fluid rounded b-shadow-a" alt="Ayodele and Folasade Kenneth">
-                </div> 
+              </div> 
               </div>
             </div>
           </div>
