Made minor changes to welcome address

--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/bg-1.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/background-2.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -124,26 +124,20 @@
                 <div class="about-me pt-4 pt-md-0">
                   <div class="title-box-2">
                     <h5 class="title-left">
-                      Welcome to The King's Church
+                      ABOUT US
                     </h5>
                   </div>
                   <p class="lead">
-                   Greetings from our hearts in the Name of our Lord and Savior Jesus Christ.
+                   	The King's Church is a non denominational community of sons and daughters of God established with the mandate to raise a saved people, operating in sonship who will advance the kingdom purpose as a cohesive body of Jesus Christ on the earth by blessing the nations and showing forth heaven's praise through the preaching of the Gospel of the kingdom of God to the whole world as a testimony before the Lord's return.
                   </p>
                   <p class="lead">
-                   We are called to the body of Christ at large but assigned to this local assembly and our primary assignment is to ensure that you have a glorious worship experience as we cast our crowns at His feet in total submission.
+										The entire creation is awaiting the manifestation of the sons of God. Romans 8v19. These sons who are internally defined as the Sinless Seed of the Spirit of truth(the incorruptible seed), are the inheritor-sons who the world awaits their manifestation. They manifest through the accurate expression of the kingdom of God.
                   </p>
                   <p class="lead">
-                    Our prayer for you is that the God of all grace will anoint you with fresh oil as His Precious Spirit will illuminate the Word as we discover wondrous things out of His Law together.
+                    The accurate expression of the Gospel of the kingdom of God in all facets of life and government is the interface through which men, the nations of the world, and the entire creation will be redeemed and liberated from the bondage of corruption and mortality. This is so that in the end, the kingdoms of this world would become the kingdom of our God and of His Christ; and God the Father will be all in all. Revelation 11v5.
                   </p>
                   <p class="lead">
-                    Further more, my wife and I pray that your lives will be a reflection of all that God intended originally for you to become on the earth.
-                  </p>
-                  <p class="lead">
-                    We declare the blessings of God on you, your children, your business, your ministry and your mission. We welcome you warmly with wide-open arms if you wish to become a member of this local assembly, but if otherwise, we would be glad to have you fellowship with us anytime you happen to travel by here.
-                  </p>
-                  <p class="lead">
-                    May the grace of our Lord Jesus Christ, the love of God, and the fellowship of the Holy Spirit be with you always.Stay loved in His Presence.<br>
+                    We are men with original inadequacies and failings, who through faith in Christ Jesus are saved; and are progressively transformed from glory to glory, (as we continually behold Him)to shine as stars and express the Word of eternal life; even as we execute His kingdom purpose to the finish.<br>
                     <strong>Ayodele & Folashade Kenneth.</strong>
                   </p>
                 </div>
