--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
                     We declare the blessings of God on you, your children, your business, your ministry and your mission. We welcome you warmly with wide-open arms if you wish to become a member of this local assembly, but if otherwise, we would be glad to have you fellowship with us anytime you happen to travel by here.
                   </p>
                   <p class="lead">
-                    May the grace of our Lord Jesus Christ, the love of God, and the fellowship of the Holy Spirit be with you always.Stay loved in His Presence.<br>
-                    <strong>Ayodele & Folashade Kenneth.</strong>
+                    May the grace of our Lord Jesus Christ, the love of God, and the fellowship of the Holy Spirit be with you always. Stay loved in His Presence.
                   </p>
+                  <strong>Ayodele & Folashade Kenneth.</strong>
                 </div>
               </div>
               <div class="col-md-6">
