--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
               <div class="col-md-12">
                 <div class="about-me pt-4 pt-md-0">
                   <div class="title-box-2">
-                    <h5 class="title-left">
+                    <h5 class="title-left text-center">
                       ABOUT US
                     </h5>
                   </div>
@@ -133,25 +133,22 @@
                   <p class="lead">
 										The entire creation is awaiting the manifestation of the sons of God. Romans 8v19. These sons who are internally defined as the Sinless Seed of the Spirit of truth(the incorruptible seed), are the inheritor-sons who the world awaits their manifestation. They manifest through the accurate expression of the kingdom of God.
                   </p>
-                  <p class="lead">
+                  <div v-show="readMore">
+                  	<p class="lead">
                     The accurate expression of the Gospel of the kingdom of God in all facets of life and government is the interface through which men, the nations of the world, and the entire creation will be redeemed and liberated from the bondage of corruption and mortality. This is so that in the end, the kingdoms of this world would become the kingdom of our God and of His Christ; and God the Father will be all in all. Revelation 11v5.
                   </p>
                   <p class="lead">
-                    We are men with original inadequacies and failings, who through faith in Christ Jesus are saved; and are progressively transformed from glory to glory, (as we continually behold Him)to shine as stars and express the Word of eternal life; even as we execute His kingdom purpose to the finish.<br>
-                    <strong>Ayodele & Folashade Kenneth.</strong>
+                    We are men with original inadequacies and failings, who through faith in Christ Jesus are saved; and are progressively transformed from glory to glory, (as we continually behold Him)to shine as stars and express the Word of eternal life; even as we execute His kingdom purpose to the finish.
                   </p>
+                  </div>
+                  <strong>Pastor Ayodele O. Kenneth.</strong>
                 </div>
               </div> 
-              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="text-center">
-        <button type="submit" class="button button-a button-big button-rouded">
-          <a href="about" class="text-white">Learn More</a>
-        </button>
-      </div>
+    </div>
     </div>
   </section>
 
@@ -281,8 +278,9 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
-  <script src="js/tkc-scripts.js"></script>
   <script src="js/vue.min.js"></script>
+  <script src="js/tkc-scripts.js"></script>
+  
 
 </body>
 </html>
