Added Read More Read Less functions

--- a/about.html
+++ b/about.html
@@ -140,8 +140,11 @@
                   <p class="lead">
                     We are men with original inadequacies and failings, who through faith in Christ Jesus are saved; and are progressively transformed from glory to glory, (as we continually behold Him)to shine as stars and express the Word of eternal life; even as we execute His kingdom purpose to the finish.
                   </p>
-                  </div>
                   <strong>Pastor Ayodele O. Kenneth.</strong>
+                  </div>
+                  <button type="submit" class="button button-a button-small button-rouded" @click="readMore = !readMore">
+                  	<span v-if="readMore">Read Less</span> <span v-else>Read More</span>
+                  </button>
                 </div>
               </div> 
             </div>
