--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,7 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll active" href="#home">Home</a>
+            <a class="nav-link js-scroll active" href="home">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="about">About Us</a>
@@ -84,7 +84,7 @@
             <a class="nav-link js-scroll" href="#">Messages</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="gallery">Gallery</a>
+            <a class="nav-link js-scroll" href="#">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
