--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
             <a class="nav-link js-scroll" href="#">Messages</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#">Gallery</a>
+            <a class="nav-link js-scroll" href="gallery">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -107,7 +107,6 @@
             <span class="text-slider-items">Bringing Many Sons Unto Glory</span>
             <strong class="text-slider"></strong>
           </p>
-          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
     </div>
