Edited Gallery contents

--- a/gallery.html
+++ b/gallery.html
@@ -114,53 +114,59 @@
   </div>
   <!--/ Intro Skew End /-->
 
-  <section id="about" class="about-mf sect-pt4 route">
-    <div class="container-fluid">
+  <!-- Gallery -->
+  <section id="work" class="portfolio-mf sect-pt4 route">
+    <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="box-shadow-full">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="about-me pt-4 pt-md-0">
-                  <div class="title-box-2">
-                    <h5 class="title-left">
-                      Welcome to The King's Church
-                    </h5>
-                  </div>
-                  <p class="lead">
-                   Greetings from our hearts in the Name of our Lord and Savior Jesus Christ.
-                  </p>
-                  <p class="lead">
-                   We are called to the body of Christ at large but assigned to this local assembly and our primary assignment is to ensure that you have a glorious worship experience as we cast our crowns at His feet in total submission.
-                  </p>
-                  <p class="lead">
-                    Our prayer for you is that the God of all grace will anoint you with fresh oil as His Precious Spirit will illuminate the Word as we discover wondrous things out of His Law together.
-                  </p>
-                  <p class="lead">
-                    Further more, my wife and I pray that your lives will be a reflection of all that God intended originally for you to become on the earth.
-                  </p>
-                  <p class="lead">
-                    We declare the blessings of God on you, your children, your business, your ministry and your mission. We welcome you warmly with wide-open arms if you wish to become a member of this local assembly, but if otherwise, we would be glad to have you fellowship with us anytime you happen to travel by here.
-                  </p>
-                  <p class="lead">
-                    May the grace of our Lord Jesus Christ, the love of God, and the fellowship of the Holy Spirit be with you always. Stay loved in His Presence.
-                  </p>
-                  <strong>Ayodele & Folashade Kenneth.</strong>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="about-im">
-                  <img src="img/tkc-img/IMG_20190101_104756_451.jpg" class="img-fluid rounded b-shadow-a" alt="Ayodele and Folasade Kenneth">
-                </div> 
-              </div>
-            </div>
+          <div class="title-box text-center">
+            <h3 class="title-a">
+              GALLERY
+            </h3>
+            <!-- <p class="subtitle-a">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p> -->
+            <div class="line-mf"></div>
           </div>
         </div>
       </div>
-      <div class="text-center">
-        <button type="submit" class="button button-a button-big button-rouded">
-          <a href="about" class="text-white">Learn More</a>
-        </button>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/work-1.jpg" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/work-1.jpg" alt="" class="img-fluid">
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/work-2.jpg" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/work-2.jpg" alt="" class="img-fluid">
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="img/work-3.jpg" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/work-3.jpg" alt="" class="img-fluid">
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 mx-auto">
+          <div class="work-box">
+            <a href="img/work-4.jpg" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/work-4.jpg" alt="" class="img-fluid">
+              </div>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
