Added images Gallery

--- a/about.html
+++ b/about.html
@@ -75,10 +75,10 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll active" href="home">Home</a>
+            <a class="nav-link js-scroll" href="home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#about">About Us</a>
+            <a class="nav-link js-scroll active" href="#about">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#">Messages</a>
@@ -122,9 +122,10 @@
               <div class="col-md-12">
                 <div class="about-me pt-4 pt-md-0">
                   <div class="title-box-2">
-                    <h5 class="title-left text-center">
+                    <h5 class="title-a text-center">
                       ABOUT US
                     </h5>
+                    <div class="line-mf"></div>
                   </div>
                   <p class="lead">
                    	The King's Church is a non denominational community of sons and daughters of God established with the mandate to raise a saved people, operating in sonship who will advance the kingdom purpose as a cohesive body of Jesus Christ on the earth by blessing the nations and showing forth heaven's praise through the preaching of the Gospel of the kingdom of God to the whole world as a testimony before the Lord's return.
