--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,7 @@
       <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll active" href="home">Home</a>
+            <a class="nav-link js-scroll" href="home">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="about">About Us</a>
@@ -84,7 +84,7 @@
             <a class="nav-link js-scroll" href="#">Messages</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#">Gallery</a>
+            <a class="nav-link js-scroll active" href="#">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -133,36 +133,36 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-1.jpg" data-lightbox="gallery-mf">
+            <a href="img/tkc-img/FB_IMG_1491859722396.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-1.jpg" alt="" class="img-fluid">
+                <img src="img/tkc-img/FB_IMG_1491859722396.jpg" alt="The King's Church" class="img-fluid">
               </div>
             </a>
           </div>
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-2.jpg" data-lightbox="gallery-mf">
+            <a href="img/tkc-img/Screenshot_2018-12-27-10-31-22-1.png" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-2.jpg" alt="" class="img-fluid">
+                <img src="img/tkc-img/Screenshot_2018-12-27-10-31-22-1.png" alt="The King's Church" class="img-fluid">
               </div>
             </a>
           </div>
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-3.jpg" data-lightbox="gallery-mf">
+            <a href="img/tkc-img/IMG_20190101_104756_451.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-3.jpg" alt="" class="img-fluid">
+                <img src="img/tkc-img/IMG_20190101_104756_451.jpg" alt="The King's Church" class="img-fluid">
               </div>
             </a>
           </div>
         </div>
         <div class="col-md-4 mx-auto">
           <div class="work-box">
-            <a href="img/work-4.jpg" data-lightbox="gallery-mf">
+            <a href="img/tkc-img/IMG_20190428_180317_574.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-4.jpg" alt="" class="img-fluid">
+                <img src="img/tkc-img/IMG_20190428_180317_574.jpg" alt="The King's Church" class="img-fluid">
               </div>
             </a>
           </div>
