--- a/home.html
+++ b/home.html
@@ -256,7 +256,7 @@
                     </ul>
                   </div><hr>
                   <div class="footer-copyright text-center mt-4">
-                    Copyright &copy; <span id="year"></span> All rights reserved. Website cratfed with 
+                    Copyright &copy; <span id="year"></span> All rights reserved. Website Crafted with 
                     <i class="fa fa-heart-o" aria-hidden="true"></i> by 
                     <a href="https://eben.com.ng" style="color: #61118a" title="Ebenezer Oladutemu" target="_blank"><b>Eben</b></a>
                   </div>
