--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">
+      <a class="navbar-brand js-scroll" href="home">
         <img src="img/logo.png" alt="The King's Church" width="50" height="50">
       </a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
