--- a/about.html
+++ b/about.html
@@ -61,229 +61,7 @@
 <body id="page-top">
 
   <!--/ Nav Star /-->
-  <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll" href="home">
-        <img src="img/logo.png" alt="The King's Church" width="50" height="50">
-      </a>
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
-        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll active" href="#about">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#">Messages</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="gallery">Gallery</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!--/ Nav End /-->
-
-  <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/background-2.jpg)">
-    <div class="overlay-itro"></div>
-    <div class="intro-content display-table">
-      <div class="table-cell">
-        <div class="container">
-          <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4 mt-8">The King's Church</h1>
-          <p class="intro-subtitle">
-            <span class="text-slider-items">Bringing Many Sons Unto Glory</span>
-            <strong class="text-slider"></strong>
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--/ Intro Skew End /-->
-
-  <section id="about" class="about-mf sect-pt4 route">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="box-shadow-full">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="about-me pt-4 pt-md-0">
-                  <div class="title-box-2">
-                    <h5 class="title-a text-center">
-                      ABOUT US
-                    </h5>
-                    <div class="line-mf"></div>
-                  </div>
-                  <p class="lead">
-                   	The King's Church is a non denominational community of sons and daughters of God established with the mandate to raise a saved people, operating in sonship who will advance the kingdom purpose as a cohesive body of Jesus Christ on the earth by blessing the nations and showing forth heaven's praise through the preaching of the Gospel of the kingdom of God to the whole world as a testimony before the Lord's return.
-                  </p>
-                  <p class="lead">
-										The entire creation is awaiting the manifestation of the sons of God. Romans 8v19. These sons who are internally defined as the Sinless Seed of the Spirit of truth(the incorruptible seed), are the inheritor-sons who the world awaits their manifestation. They manifest through the accurate expression of the kingdom of God.
-                  </p>
-                  <div v-show="readMore">
-                  	<p class="lead">
-                    The accurate expression of the Gospel of the kingdom of God in all facets of life and government is the interface through which men, the nations of the world, and the entire creation will be redeemed and liberated from the bondage of corruption and mortality. This is so that in the end, the kingdoms of this world would become the kingdom of our God and of His Christ; and God the Father will be all in all. Revelation 11v5.
-                  </p>
-                  <p class="lead">
-                    We are men with original inadequacies and failings, who through faith in Christ Jesus are saved; and are progressively transformed from glory to glory, (as we continually behold Him)to shine as stars and express the Word of eternal life; even as we execute His kingdom purpose to the finish.
-                  </p>
-                  <strong>Pastor Ayodele O. Kenneth.</strong>
-                  </div>
-                  <button type="submit" class="button button-a button-small button-rouded" @click="readMore = !readMore">
-                  	<span v-if="readMore">Read Less</span> <span v-else>Read More</span>
-                  </button>
-                </div>
-              </div> 
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </section>
-
-  <!--/ Section Contact-Footer Star /-->
-  <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/background-2.jpg)">
-    <div class="overlay-mf"></div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="contact-mf">
-            <div id="contact" class="box-shadow-full">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="title-box-2">
-                    <h5 class="title-left">
-                      Get In Touch
-                    </h5>
-                  </div>
-                  <div>
-                      <form action="" method="post" role="form" class="contactForm">
-                      <div id="sendmessage">Your message has been sent. Thank you!</div>
-                      <div id="errormessage"></div>
-                      <div class="row">
-                        <div class="col-md-12 mb-3">
-                          <div class="form-group">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                            <div class="validation"></div>
-                          </div>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                          <div class="form-group">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                            <div class="validation"></div>
-                          </div>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                              <div class="validation"></div>
-                            </div>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                          <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                            <div class="validation"></div>
-                          </div>
-                        </div>
-                        <div class="col-md-12">
-                          <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="title-box-2 pt-4 pt-md-0">
-                    <h5 class="title-left">
-                      Contact Us
-                    </h5>
-                  </div>
-                  <div class="more-info">
-                    <p class="lead">
-                      We're always available. We would love to hear from you.
-                    </p>
-                    <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> Hardunni Banquet Hall. Ayeni 1010 Close, Sheraton-Opebi Link Road. Ikeja</li>
-                      <li><span class="ion-ios-telephone"></span> 
-                        <a href="tel:08098256329">0809 825 6329&nbsp;&nbsp;&nbsp;&nbsp;</a>  
-                        <a href="tel:08120921658">0812 092 1658</a>
-                      </li>
-                      <li><span class="ion-email"></span> 
-                        <a href="mailto:thekingschurch2016@gmail.com">thekingschurch2016@gmail.com</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="socials">
-                    <ul>
-                      <li>
-                        <a href="https://www.facebook.com/The-Kings-Church-426057771213400/">
-                          <span class="ico-circle"><i class="ion-social-facebook"></i></span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="https://instagram.com/Thekingschurch">
-                          <span class="ico-circle"><i class="fa fa-instagram"></i></span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="https://twitter.com/Thekingschurch3">
-                          <span class="ico-circle"><i class="ion-social-twitter"></i></span>
-                        </a>
-                      </li>
-                    </ul>
-                  </div><hr>
-                  <div class="footer-copyright text-center mt-4">
-                    Copyright &copy; <span id="year"></span> All rights reserved. Website Crafted with 
-                    <i class="fa fa-heart-o" aria-hidden="true"></i> by 
-                    <a href="https://eben.com.ng" style="color: #61118a" title="Ebenezer Oladutemu" target="_blank"><b>Eben</b></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </section>
-  <!--/ Section Contact-footer End /-->
-
-  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-  <div id="preloader"></div>
-
-  <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/jquery/jquery-migrate.min.js"></script>
-  <script src="lib/popper/popper.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
-  <script src="lib/counterup/jquery.waypoints.min.js"></script>
-  <script src="lib/counterup/jquery.counterup.js"></script>
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="lib/lightbox/js/lightbox.min.js"></script>
-  <script src="lib/typed/typed.min.js"></script>
-  <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
-
-  <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
-  <script src="js/vue.min.js"></script>
-  <script src="js/tkc-scripts.js"></script>
-  
+<h1 class="jumbotron text-center">Site can't be available at the moment</h1>
 
 </body>
 </html>
