--- a/gallery.html
+++ b/gallery.html
@@ -61,6 +61,7 @@
 <body id="page-top">
 
   <!--/ Nav Star /-->
+    <h1 class="jumbotron text-center">Site can't be available at the moment</h1>
     
 </body>
 </html>
